<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/pic_promo1"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/pic_promo1"
        android:text="@string/promo1"
        android:textSize="19sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/pic_promo2"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/pic_promo2"
        android:text="@string/promo2"
        android:textSize="19sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/pic_promo3"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/pic_promo3"
        android:text="@string/promo3"
        android:textSize="19sp" />


</LinearLayout>